# musicality

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Music.h  PitchDetector.cpp  PitchDetector.h  main.cpp
